--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,6 +1,7 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Books</h1>
+<h1>Jungle Books</h1>
+<h2>This Month's Suggestions</h2>
 
 <table>
   <thead>
