--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,5 +1,13 @@
-<h1>New Book</h1>
+<h1>Suggest New Books</h1>
 
-<%= render 'form' %>
+<div class = "form-group">
+<% if current_user.host? %>
+  <%= form_for(@book) do |f| %>
+    <%= f.text_field :title, label: "Book Title" %>
+    <%= f.text_field :author, label: "Author" %>
+    <%= f.primary "Submit" %>
+  <% end %>
+</div>
+<% end %>
 
 <%= link_to 'Back', books_path %>
