--- a/app/assets/stylesheets/books.scss
+++ b/app/assets/stylesheets/books.scss
@@ -1,3 +1,15 @@
 // Place all the styles related to the Books controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+div.review-frame {
+  height: 580px;
+  overflow: hidden;
+}
+
+iframe {
+  width: 80%;
+  height: 80%;
+  margin: 0px;
+  padding: 0px;
+}
