--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -13,14 +13,11 @@
   <tbody>
     <% @books.each do |book| %>
       <tr>
+        <td><%= book.title %></td>
+        <td><%= book.author%></td>
         <td><%= link_to 'Show', book %></td>
-        <td><%= link_to 'Edit', edit_book_path(book) %></td>
         <td><%= link_to 'Destroy', book, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to 'Submit a New Book', new_book_path %>
