--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,4 +1,10 @@
 <p id="notice"><%= notice %></p>
-
-<%= link_to 'Edit', edit_book_path(@book) %> |
+<div>
+<p><%= @book.title %></p>
+<p>By <%= @book.author %></p>
+</div>
+<div class="review-frame">
+<iframe src="<%= @book.customer_reviews %>" seamless />
+</div>
+<%= link_to 'Vote', new_vote_path %> |
 <%= link_to 'Back', books_path %>
