delete is now working

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,11 +45,11 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">JungleBooks</a>
+        <a class="navbar-brand" href="/">JungleBooks</a>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
           <ul class="nav navbar-nav">
-            <li><%= link_to "Vote", root_path  %></li>
-            <li><%= link_to "Submit", new_book_path %></li>
+            <li><%= link_to "Cast Your Vote", root_path  %></li>
+            <li><%= link_to "Submit Your Suggestion", new_book_path %></li>
           </ul>
         </div>
         <ul class="nav navbar-nav pull-right">
