--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -14,7 +14,7 @@
     <% @books.each do |book| %>
       <tr>
         <td><%= book.title %></td>
-        <td><%= book.author%></td>
+        <td>by <%= book.author%></td>
         <td><%= link_to 'Show', book %></td>
         <td><%= link_to 'Destroy', book, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
