--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,8 +48,11 @@
         <a class="navbar-brand" href="/">JungleBooks</a>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
           <ul class="nav navbar-nav">
-            <li><%= link_to "Cast Your Vote", root_path  %></li>
+          <% if user_signed_in? %>
+            <% if current_user.host? %>
             <li><%= link_to "Submit Your Suggestion", new_book_path %></li>
+            <% end %>
+            <% end %>
           </ul>
         </div>
         <ul class="nav navbar-nav pull-right">
