--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -13,6 +13,7 @@
   <tbody>
     <% @books.each do |book| %>
       <tr>
+        <td><%= book.total_votes %></td>
         <td><%= book.title %></td>
         <td>by <%= book.author%></td>
         <td><%= link_to 'Show', book %></td>
