--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,8 +49,10 @@
         <div class="navbar-collapse collapse navbar-responsive-collapse">
           <ul class="nav navbar-nav">
           <% if user_signed_in? %>
+            <li><%= link_to "What We're Reading", winners_path %></li>
             <% if current_user.host? %>
             <li><%= link_to "Submit Your Suggestion", new_book_path %></li>
+            <li><%= link_to "Close Voting", winners_path, :action => :create, :method => :post %></li>
             <% end %>
             <% end %>
           </ul>
