add Amazon link

--- a/app/views/winners/index.html.erb
+++ b/app/views/winners/index.html.erb
@@ -3,6 +3,7 @@
 <h2>This month, we're reading...</h2>
 <h3><%= @most_recent_winner.title %></h3>
 <p>by <%= @most_recent_winner.author %></p>
+<p><a href="<%= @most_recent_winner.product_page %>">Buy the book on Amazon</a></p>
 </div>
 <div>
 <h2>In the past, we've read...</h2>
