--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,15 +1,16 @@
 body {
-  background-color: #fff;
+  background-image: url('http://i.imgur.com/jZKj0gU.jpg');
   color: #333;
-  font-family: verdana, arial, helvetica, sans-serif;
-  font-size: 13px;
+  font-family: raleway, sans-serif;
+  font-size: 12px;
   line-height: 18px;
 }
 
 p, ol, ul, td {
-  font-family: verdana, arial, helvetica, sans-serif;
+  font-family: raleway, sans-serif;
   font-size: 13px;
   line-height: 18px;
+  color: #fff;
 }
 
 pre {
@@ -19,13 +20,12 @@ pre {
 }
 
 a {
-  color: #000;
+  color: #fff;
   &:visited {
-    color: #666;
+    color: #fff;
   }
   &:hover {
-    color: #fff;
-    background-color: #000;
+    color: #fffccc;
   }
 }
 
