--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,13 +1,15 @@
-<p id="notice"><%= notice %></p>
-<div>
-<%= link_to 'Vote For This Book', new_vote_path(:id => @book.id, :value => 1) %> |
-<%= link_to 'Back', books_path %>
-</div>
-<div>
-<h2><%= @book.title %></p>
-<h3>By <%= @book.author %></p>
-</div>
-<div class="review-frame">
-<iframe src="<%= @book.customer_reviews %>" seamless />
+<div class="center-block">
+  <p id="notice"><%= notice %></p>
+  <div class="on-page-nav">
+  <%= link_to 'Vote For This Book', new_vote_path(:id => @book.id, :value => 1), data: {confirm: 'Are you sure? Remember, you only get one vote.' } %> |
+  <%= link_to 'Back', books_path %>
+  </div>
+  <div class="result-info">
+    <h2><%= @book.title %></h2>
+    <h3>By <%= @book.author %></h3>
+    <div class="review-frame">
+      <iframe src="<%= @book.customer_reviews %>" seamless />
+    </div>
+  </div>
 </div>
 
