add table style to past  winners index

--- a/app/views/winners/index.html.erb
+++ b/app/views/winners/index.html.erb
@@ -6,9 +6,9 @@
     <small>by <%= @most_recent_winner.author %></small></h3>
     <p><a href="<%= @most_recent_winner.product_page %>">Buy the book on Amazon</a></p>
   </div>
-  <div class="past-winners">
   <h2>In the past, we've read...</h2>
-  <table>
+  <div class="table-responsive">
+  <table class="table">
     <thead>
       <tr>
         <th colspan="3"></th>
