more content area styling

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -8,7 +8,7 @@
     <h2><%= @book.title %></h2>
     <h3>By <%= @book.author %></h3>
     <div class="review-frame">
-      <iframe src="<%= @book.customer_reviews %>" seamless />
+      <iframe seamless src="<%= @book.customer_reviews %>" />
     </div>
   </div>
 </div>
