--- a/app/assets/stylesheets/books.scss
+++ b/app/assets/stylesheets/books.scss
@@ -3,13 +3,16 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 div.review-frame {
-  height: 960px;
+  height: 940px;
   overflow: hidden;
+  margin-left: -18px;
 }
 
 iframe {
-  width: 80%;
+  width: 100%;
   height: 100%;
-  margin: 0px;
-  padding: 0px;
+  margin: 10px;
+  padding: 10px;
+  border: none;
+  background-color: transparent;
 }
