--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -1,3 +1,11 @@
+div.center-block {
+  background: rgba(255,255,255,0.25);
+  padding-top: 10px;
+  padding-right: 20px;
+  padding-left: 20px;
+  padding-bottom: 30px;
+}
+
 h1 {
   font-family: pacifico, cursive;
   font-size: 32px;
@@ -32,16 +40,11 @@ div.center-block {
   display: block;
   margin-left: auto;
   margin-right: auto;
-}
-
-div .col-lg-9 {
-  width: 680px;
-  margin: 0 auto;
-  padding: 10px;
-  color: #515b6f;
+  padding: 25px;
 }
 
 table {
+  width: 100;
   border-collapse: collapse;
 }
 
