--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -5,18 +5,16 @@
 <h2>This Month's Suggestions</h2>
 <div class="table-responsive">
   <table class="table">
-    <thead>
-      <tr>
-        <th colspan="3"></th>
-      </tr>
+    <thead colspan="3">
+      <th>Votes</th>
+      <th>Title</th>
+      <th>Author</th>
+      <th></th>
+      <th></th>
     </thead>
     <tbody>
       <tr>
-        <td>Votes</td>
-        <td>Title</td>
-        <td>Author</td>
-        <td></td>
-        <td></td>
+
       </tr>
       <% @books.each do |book| %>
       <tr>
