--- a/app/views/books/select.html.erb
+++ b/app/views/books/select.html.erb
@@ -3,20 +3,16 @@
   <h1>Search Results</h1>
   <div class="table-responsive">
     <table class="table">
-      <thead>
-        <tr>
-          <th colspan="3"></th>
-        </tr>
+      <thead colspan="3">
+        <th>Votes</th>
+        <th>Title</th>
+        <th>Author</th>
+        <th></th>
+        <th></th>
       </thead>
 
       <tbody>
       <div class="result">
-      <tr>
-        <td>Title</td>
-        <td>Author</td>
-        <td></td>
-        <td></td>
-      </tr>
         <% @books.each do |book| %>
         <tr>
           <td><%= book["ItemAttributes"]["Title"] %></td>
