--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -61,7 +61,7 @@
 
             <ul class="nav navbar-nav navbar-right">
             <% if user_signed_in? %>
-              Logged in as <strong><%= current_user.email %></strong>.
+              Logged in as <strong><%= current_user.email %></strong> | 
               <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
               <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
             <% else %>
@@ -75,10 +75,8 @@
 
     <div class="container">
       <div class="row">
-        <div class="col-lg-9">
-          <%= bootstrap_flash %>
-          <%= yield %>
-        </div>
+        <%= bootstrap_flash %>
+        <%= yield %>
       </div><!--/row-->
 
       <footer>
